# OmoiOS

./: .coverage  .coverage.Kevins-MacBook-Air.local.63603.XikpyqKx  .coverage.Kevins-MacBook-Air.local.64962.Xestfzhx  .coverage.Kevins-MacBook-Air.local.75842.Xypoymrx  .coverage.Kevins-MacBook-Air.local.82045.XABYoZBx  .coverage.Kevins-MacBook-Air.local.94707.XDswdJhx  .cursorrules  .dockerignore  .env.example  .env.local.backup  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  API_TEST_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSATION_CONTROL_PROTOTYPE.md  Dockerfile.cloud-agent  Dockerfile.worker  ITERATION_NOTES.md  Justfile  LICENSE  MARKETING_DESCRIPTION.md  MEMORY.md  PLAN.md  QUICKSTART.md  README.md  README_AI_ORGANIZATION.md  SANDBOX_MIGRATION_TASK.md  SECURITY.md  STREAM_F_COMPLETION_REPORT.md  TEST_1_EXPLANATION.md  UI.md  agent-browser.skill  alembic.ini  api_test_results.txt  (+25 more)
backend/: .env.example  .env.remote-test  .testmondata-shm  .testmondata-wal  CLAUDE.md  Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker  Justfile  Makefile  README.md  TYPE_CHECK_REPORT.md  alembic.ini  config.py  docker-compose.yml  docker-entrypoint.sh  openapi.json  pyproject.toml  pyrightconfig.json  pytest.ini  railway-monitoring.json  railway-orchestrator.json  railway-taskiq-scheduler.json  railway-taskiq-worker.json  railway.json  ty_check_output.txt
backend/.omoi_os/designs/: task-queue-user-limits.md
backend/.omoi_os/requirements/: task-queue-user-limits.md
backend/.omoi_os/tasks/: TSK-TQU-001-create-migration.md  TSK-TQU-002-plan-config.md  TSK-TQU-003-update-user-model.md  TSK-TQU-004-plan-service.md  TSK-TQU-005-running-count.md  TSK-TQU-006-claim-any-user.md  TSK-TQU-007-usage-tracking.md  TSK-TQU-008-orchestrator-timeout.md  TSK-TQU-009-api-create-task.md  TSK-TQU-010-api-queue-status.md  TSK-TQU-011-api-cancel-task.md  TSK-TQU-012-integration-tests.md
backend/.omoi_os/tickets/: TKT-TQU-001-database-plan-models.md  TKT-TQU-002-plan-service.md  TKT-TQU-003-task-queue-extensions.md  TKT-TQU-004-orchestrator-updates.md  TKT-TQU-005-api-endpoints.md  TKT-TQU-006-integration-testing.md
backend/agent_orchestration/: __init__.py  registry_client.py
backend/config/: base.yaml  local.yaml  production.yaml  test.yaml
backend/config/alert_rules/: agent_health.yaml  watchdog_escalation.yaml
backend/config/watchdog_policies/: monitor_restart.yaml
backend/docker/initdb/: 01_extensions.sql
backend/docs/: AGENT_SERVER_SANDBOX_TESTING.md  CRITICAL_PATH.md  DISTRIBUTED_AGENT_ARCHITECTURE.md  E2E_TESTING_PLAN.md  FEATURE_INVENTORY.md  RAILWAY_DEPLOYMENT.md  SAAS_ARCHITECTURE_AUDIT.md  SANDBOX_ENVIRONMENT_VARIABLES.md  SANDBOX_TESTING_DAYTONA.md  WORKSPACE_ARCHITECTURE.md  WORKSPACE_DEEP_DIVE.md
backend/docs/analytics/: server-side-tracking.md
backend/docs/guides/: async_python_patterns.md  duplicate_task_spawning_investigation.md
backend/docs/observability/: sentry-setup.md
backend/docs/spec-driven-development/: COMPREHENSIVE_STATUS.md  IMPLEMENTATION_ROADMAP.md  README.md  TESTING_GUIDE.md  activation-guide.md  architecture.md  command-page-integration.md  data-flow-gap.md  github-integration-gap.md  impact-assessment.md  implementation-gaps.md  phase-data-flow.md  sandbox-execution.md  skill-to-api-flow.md  spec-comments-feature.md  ticket-field-gap.md  ui-and-events.md
backend/docs/testing/: browser-agent-spec-test-instructions.md  validation_system_test_plan.md
backend/docs/transcripts/: browser-test-spec-driven-dev.md  spec-driven-dev-continuation.md
backend/examples/: daytona_workspace_example.py  openhands_daytona_example.py
backend/experiments/: test_daytona_sdk_workspace.py
backend/migrations/: 003_intelligent_monitoring_enhancements.py  env.py  migration_utils.py
backend/omoi_os/: __init__.py  config.py  logging.py  sandbox_worker.py  worker.py
backend/scripts/: README_KANBAN_PROTOTYPE.md  README_SANDBOX_TESTS.md  apply_auth_migration.py  ascii_hello_world.py  batch_fail_tasks.py  check_clone_readiness.py  cleanup_sandboxes.py  compare_sandbox_events.py  create_test_dependency_graph.py  debug_settings.py  demo_flow.py  demo_phase_flow.py  fix_ticket_phase_ids.py  get_sandbox_logs.py  hello_world.py  hello_world_ascii.py  kanban_prototype.html  list_recent_sandboxes.py  mcp_client_example.py  organize_docs_batch.py  query_sandbox_events.py  run_all_tests.py  run_migration_railway.sh  run_spec_worker_local.py  setup_test_environment.sh  simulate_parallel_workflow.py  smoke_test.py  test_agent_limits.py  test_agent_task_completion.py  test_api_sandbox_spawn.py  test_artifact_generation.py  test_auth_system.py  test_claude_session_transcript.py  test_direct_task_injection.py  test_e2e_phase_flow.py  test_fastmcp_server.py  test_intelligent_monitoring.py  test_mcp_endpoints.py  test_mcp_full.py  test_mcp_http.py  (+17 more)
backend/static/: index.html
backend/tests/: CLAUDE.md  README.md  __init__.py  check_result_structure.py  conftest.py  test_01_database.py  test_02_task_queue.py  test_03_event_bus.py  test_04_agent_executor.py  test_05_e2e_minimal.py  test_ace_workflow.py  test_agent_health.py  test_agent_status_state_machine.py  test_anomaly_detection.py  test_auth_service.py  test_auth_unit.py  test_authorization_service.py  test_authorization_unit.py  test_board_and_phases.py  test_budget_enforcement.py  test_collaboration.py  test_config_settings.py  test_context_passing.py  test_coordination_patterns.py  test_cost_tracking.py  test_diagnostic_runs.py  test_dynamic_task_scoring.py  test_e2e_parallel.py  test_fastmcp_server.py  test_file_validation.py  test_fireworks.py  test_gateway_simple.py  test_guardian.py  test_guardian_policies.py  test_health_endpoint.py  test_heartbeat_protocol.py  test_hello_endpoint.py  test_helpers.py  test_implementation_phase.py  test_intelligent_monitoring.py  (+23 more)
subsystems/sandbox-runtime/: pyproject.toml
subsystems/spec-sandbox/: .gitignore  README.md  pyproject.toml  pytest.ini  test_real_execution_output.json
tools/resmgr/: Cargo.toml
(+1896 files in other folders)
