[project]
name = "senior-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openhands-sdk>=1.1.0",
    "openhands-tools>=1.1.0",
    "pydantic>=2.7.0,<3",
    "pydantic-settings>=2.3.0,<3",
    "sqlalchemy>=2.0.0,<3",
    "psycopg[binary,pool]>=3.2.0,<4",
    "pgvector>=0.3.3,<1",
    "alembic>=1.13.0,<2",
]

[dependency-groups]
dev = [
    "openhands-agent-server>=1.1.0",
    "openhands-workspace>=1.1.0",
]
