[project]
name = "omoi-os"
version = "0.1.0"
description = "OmoiOS - Multi-Agent Orchestration System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openhands-sdk>=1.1.0",
    "openhands-tools>=1.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.7.0,<3",
    "pydantic-settings>=2.3.0,<3",
    "sqlalchemy>=2.0.0,<3",
    "psycopg[binary,pool]>=3.2.0,<4",
    "pgvector>=0.3.3,<1",
    "alembic>=1.13.0,<2",
    "redis>=5.0.0,<6",
    "whenever>=0.9.3",
    "pyyaml>=6.0.0,<7",
    "logfire>=2.0.0,<3",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "fastembed>=0.2.0",
    "openai>=2.8.0",
    "numpy>=2.3.4",
    "anthropic>=0.73.0",
    "pydantic-ai>=0.0.14",
    "jinja2>=3.1.6",
    "jsonschema>=4.20.0,<5",
    "fastmcp>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Configure module discovery: omoi_os package is in the project root
module-name = "omoi_os"
module-root = ""

[dependency-groups]
dev = [
    "openhands-agent-server>=1.1.0",
    "openhands-workspace>=1.1.0",
]
test = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.23.0,<1",
    "fakeredis>=2.20.0,<3",
    "pytest-cov>=4.1.0,<5",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
]
